# pt-demo-lc-rag

./: .gitignore  README.md  devbox.json
run-ragged/: .dockerignore  Dockerfile  Dockerfile_SAVE  README.md  pyproject.toml
run-ragged/app/: ai_collaboration.py  conversation_memory.py  debug_metrics.py  indexer.py  logging_config.py  mem_test.py  rag_handler.py  server.py
run-ragged/docs/: conf.py  index.rst
run-ragged/docs/_build/doctrees/: environment.pickle  index.doctree
run-ragged/docs/_build/doctrees/source/: index.doctree
run-ragged/docs/_build/doctrees/source/api_docs/: index.doctree
run-ragged/docs/_build/doctrees/source/app/: ai_collaboration.doctree  conversation_memory.doctree  debug_metrics.doctree  index.doctree  indexer.doctree  server.doctree
run-ragged/docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
run-ragged/docs/_build/html/_sources/source/api_docs/: index.rst.txt
run-ragged/docs/_build/html/_sources/source/app/: ai_collaboration.rst.txt  conversation_memory.rst.txt  debug_metrics.rst.txt  index.rst.txt  server.rst.txt
run-ragged/docs/_build/html/_static/: documentation_options.js
run-ragged/docs/_build/html/source/: index.html
run-ragged/docs/_build/html/source/api_docs/: index.html
run-ragged/docs/_build/html/source/app/: ai_collaboration.html  conversation_memory.html  debug_metrics.html  index.html  indexer.html  server.html
run-ragged/docs/source/: ai_collaboration.rst  conversation_memory.rst  indexer.rst  server.rst
run-ragged/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
run-ragged/frontend/src/: App.jsx  ErrorBoundary.jsx  main.jsx
run-ragged/frontend/src/components/: CollaborationSettings.jsx  DebugComponents.jsx  FileList.jsx  MessageBubble.jsx  PDFFileList.jsx  PDFFileUpload.jsx  ToastNotification.jsx
run-ragged/frontend/src/hooks/: index.js  rag.js
run-ragged/frontend/src/utils/: index.js  rag.js
