[tool.poetry]
name = "twig" # albear / lisa / twig / wyndham / etc
version = "0.0.209"
description = ""
authors = ["Paul Talbot <prolixalias@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
circuitbreaker = "^2.0.0"
cloud-sql-python-connector = {extras = ["pg8000"], version = "^1.15.0"}
config = "0.5.1"
fastapi = "^0.109.0"
fastapi-limiter = "0.1.6"
google-cloud-aiplatform = "^1.38.0"
google-cloud-logging = "3.11.3"
google-cloud-monitoring = "^2.24.0"
google-cloud-storage = "^2.14.0"
httpx = "0.27.2"
json_repair = "^0.4.1"
python = "^3.11"
python-json-logger = "^2.0.4"
python-multipart = "^0.0.9"

# LangChain ecosystem - aligned versions
langserve = {extras = ["server"], version = ">=0.0.30"}

# Database
asyncpg = "0.29.0"
pgvector = "0.2.5"

# PDF processing
pypdf = "5.1.0"

# langchain
langchain = "^0.3.13"
langchain-community = "^0.3.13"
langchain-core = "^0.3.28"
langchain-google-vertexai = "^2.0.9"
langchain-postgres = "0.0.12"
langchain-xai = "^0.1.1"

# Server and monitoring
prometheus-client = "0.21.1"
pydantic = ">=2"
tomli = "^2.2.1"
uvicorn = "0.34.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
